Fixed broken CSS (wasn’t correctly merged) and re-added TODO

--- a/public/app/screens/main/navigation/style.scss
+++ b/public/app/screens/main/navigation/style.scss
@@ -1,9 +1,9 @@
-@import "components-theme";
-@import "theme/components/icon-bar";
+@import "theme";
 
 .cc_navigation {
 
-  @include icon-bar();
+  //TODO: Use icon-bar mixin
+  //@include icon-bar();
 
   &.icon-bar {
     background: transparent;
