--- a/public/app/screens/main/sections/device-details/style.scss
+++ b/public/app/screens/main/sections/device-details/style.scss
@@ -49,17 +49,6 @@ $column-factor: $total-columns / $content-columns;
   &__details{
     @include grid-row();
 
-  &__close-button{
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: url("./img/close.svg") no-repeat;
-    background-size: 100%;
-    width: 15px;
-    height: 15px;
-  }
-
-  &__controls{
     padding-bottom: 10px;
 
     &-label{
